--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>Home | Cruzo</title>
+    <title>CornHub</title>
    <link rel="stylesheet" href="stylesheets/default.css">
     <ul>
         <li><a href="\">Home</a></li>
@@ -8,9 +8,9 @@
         <li><a href="socials">Socials</a></li>
         <li><a href="aboutme">About Me</a></li>
       </ul>
-    <h1>Cruzo.hopto.org</h1>
+    <h1>We love corn!!!</h1>
     <body>
-        <h2>Yo, welcome to my website!</h2>
-        <h3>also the website looks like shit sorry.</h3>
+        <h2>COOOORN!!!</h2>
+        <img src="corn.png" alt="CORN!!!!!!!">
     </body>
 </html>
