--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>CornHub</title>
+    <title>We love Corn</title>
    <link rel="stylesheet" href="stylesheets/default.css">
     <ul>
         <li><a href="\">Home</a></li>
