--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>We love corn!!!</h1>
     <body>
         <h2>COOOORN!!!</h2>
-        <img src="corn.png" alt="CORN!!!!!!!">
+        <div class="corn"><img alt="Mysterious frame" class="corn1" src="corn.png"><img alt="Best Inu" class="corn2" src="popcorn.png"></div>
     </body>
 </html>
