--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>We love corn!!!</h1>
     <body>
         <h2>COOOORN!!!</h2>
-        <a href=”popcorn”><img src=”corn.png”></a> 
+        <a href=popcorn><img src=corn.png></a> 
     </body>
 </html>
