--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <html>
     <title>We love Corn</title>
    <link rel="stylesheet" href="stylesheets/default.css">
-    <ul>
-        <li><a href="\">Home</a></li>
-        <li><a href="projects">Projects!</a></li>
-        <li><a href="socials">Socials</a></li>
-        <li><a href="aboutme">About Me</a></li>
-      </ul>
-    <h1>We love corn!!!</h1>
-    <body>
-        <h2>COOOORN!!!</h2>
-        <a href=popcorn><img src=corn.png></a> 
-    </body>
-</html>
+ <div class="fade-in-text">
+  <p>Cruz Michelini Presents....</p>
+</div>
+<html>
