--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>We love Corn</title>
    <link rel="stylesheet" href="stylesheets/default.css">
  <div class="fade-in-text">
+ <div class="fade-out">
   <p>Cruz Michelini Presents....</p>
 </div>
 <html>
