--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <title>We love Corn</title>
    <link rel="stylesheet" href="stylesheets/default.css">
- <div class="fade-out">
+ <div class="fade-in-text">
   <p>Cruz Michelini Presents....</p>
 </div>
 <html>
