--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>We love Corn</title>
+    <body style="background-color:black;">
    <link rel="stylesheet" href="stylesheets/default.css">
  <div class="fade-in-text">
   <p>Cruz Michelini Presents....</p>
