no more corn >:)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <title>We love Corn</title>
+    <title>Who Am I?</title>
     <body style="background-color:black;">
    <link rel="stylesheet" href="stylesheets/default.css">
  <div class="fade-in-text">
