--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <title>Who Am I?</title>
     <body style="background-color:black;">
+    <meta http-equiv = "refresh" content = "10; url = https://cruzjs-whoami.hopto.org/popcorn" />
    <link rel="stylesheet" href="stylesheets/default.css">
- <div class="fade-in-text">
-  <p>Cruz Michelini Presents....</p>
+   <div class="fade-in-text">
+   <p>Cruz Michelini Presents....</p>
 </div>
 <html>
