--- a/popcorn.html
+++ b/popcorn.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <title>What</title>
+    <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
-    <h1>We love corn!!!</h1>
-    <body>
-        <h2>Whats!!!</h2>
-        <a href=popcorn><img src=popcorn.png></a> 
+    <img>src=undertitle.png</img>
     </body>
 </html>
