--- a/popcorn.html
+++ b/popcorn.html
@@ -2,6 +2,6 @@
 <html>
     <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
-    <img>src=undertitle.png</img>
+    <img src=undertitle.png>
     </body>
 </html>
