--- a/popcorn.html
+++ b/popcorn.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <body style="background-color:black;">
     <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
     <img src=undertitle.png>
