--- a/popcorn.html
+++ b/popcorn.html
@@ -3,6 +3,6 @@
     <body style="background-color:black;">
     <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
-    <img src=undertitle.png>
+    <img src="undertitle.png" style="position: absolute; top: 792px; left: 520px;"/>
     </body>
 </html>
