--- a/popcorn.html
+++ b/popcorn.html
@@ -4,5 +4,6 @@
     <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
     <img src="undertitle.png"/>
+    <img src="undertitle.png"/>
     </body>
 </html>
