--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>Who Am I?</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="favicon.ico">
     <body style="background-color:black;">
     <meta http-equiv = "refresh" content = "10; url = https://cruzjs-whoami.hopto.org/title" />
    <link rel="stylesheet" href="stylesheets/default.css">
