--- a/game.html
+++ b/game.html
@@ -3,7 +3,6 @@
     <body style="background-color:black;">
     <title>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</title>
    <link rel="stylesheet" href="stylesheets/default.css">
-    <img src="undertitle.png"/>
-    <a href="game"><img src="click-to-begin.png"/></a>
+        <h1> Hey Guys cruzoplayz here </h1>     
     </body>
 </html>
