--- a/title.html
+++ b/title.html
@@ -4,6 +4,6 @@
     <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
     <img src="undertitle.png"/>
-    <a href="game"><img src="click-to-begin.png"/></a>
+    <a href="game/index"><img src="click-to-begin.png"/></a>
     </body>
 </html>
