--- a/vhs.html
+++ b/vhs.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" href="stylesheets/default.css">
       
       <video width="320" height="240" controls>
-  <source src="vhs.mp4" type="video/mp4">
+  <source src="Final Output_1.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 
