--- a/vhs.html
+++ b/vhs.html
@@ -4,8 +4,8 @@
     <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
       
-      <video width="320" height="240" controls>
-  <source src="Final Output_1.mp4" type="video/mp4">
+      <video width="1920" height="1080" autoplay>
+  <source src="Final Output.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 
