--- a/vhs.html
+++ b/vhs.html
@@ -4,7 +4,7 @@
     <title>Who Am I?</title>
    <link rel="stylesheet" href="stylesheets/default.css">
       
-      <video width="1024" height="768" autoplay>
+      <video width="1024" height="768" autoplay controls>
   <source src="Final Output.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
